--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,7 @@ body {
   border: 8px solid #dddddd;
   border-radius: 24px;
   overflow: hidden;
+  /* height: 500px; */
 }
 
 .name {
@@ -57,7 +58,7 @@ body {
   flex-direction: column;
   background-color: #f6f6f6;
   width: 400px;
-  height: 600px;
+  height: 400px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
